gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail_circular2.d
version https://git-lfs.github.com/spec/v1
oid sha256:5a272f0450ce4f55fc174994e0c45c25e809141088e79cf4db2d30d1693f36da
size 737
